# QRAN

./: .gitignore  6G 網路與企業專網中的 Q-RAN 新風險分析與緩解策略.md  CLAUDE.md  O-RAN O1、O2、E2 介面安全分析與量子密碼技術導入建議.md  PROJECT_STATUS_2025-11-22.md  Q-RAN 資料.md  Q-RAN_ Quantum Secure O-RAN.md  QORE_ONAP_SECCOM.md  QORE_ONAP_SECCOMfig.md  RESEARCH_SURVEY_SUMMARY_2025-11-27.md  RESEARCH_TOPICS_2025-11.md  SYSADMIN_REQUEST.md  量子安全 O-RAN（Q-RAN）研究筆記.md  開源後量子電信網路參考實作.md
PQ-TelcoBench/: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
PQ-TelcoBench/config/: prometheus.yml
PQ-TelcoBench/docs/architecture/: ARCHITECTURE.md
PQ-TelcoBench/kubernetes/: deployment.yaml
PQ-TelcoBench/scripts/: install_liboqs.sh
PQ-TelcoBench/src/: __init__.py
PQ-TelcoBench/src/e2_interface/: __init__.py  benchmark.py
PQ-TelcoBench/src/pqc_lib/: __init__.py  provider.py
PQ-TelcoBench/src/utils/: __init__.py  logger.py
PQ-TelcoBench/tests/: conftest.py
PQ-TelcoBench/tests/unit/: test_e2_benchmark.py  test_pqc_provider.py
